--- a/shop-brainwaves.html
+++ b/shop-brainwaves.html
@@ -27,8 +27,12 @@
   <!-- Product page specific -->
   <link rel="stylesheet" href="assets/css2/pages/shop-brainwaves.css">
   <link rel="stylesheet" href="assets/css2/pages/shop-brainwaves.fix.css">
-  
+
+   <!-- ✅ เพิ่ม (STEP 3) -->
+<link rel="stylesheet" href="assets/nav-patch.css">
   <script src="assets/main.js" defer></script>
+<!-- ✅ เพิ่ม (STEP 1) ต้องอยู่หลัง main.js -->
+<script src="assets/nav-patch.js" defer></script>  
 </head>
 
 <body class="page--shop shopPage page--shop-brainwaves">
