--- a/services.html
+++ b/services.html
@@ -55,7 +55,11 @@
   <link rel="stylesheet" href="assets/css2/pages/shop.css">
   <link rel="stylesheet" href="assets/css2/pages/services.css">
 
+  <!-- ✅ เพิ่ม (STEP 3) -->
+<link rel="stylesheet" href="assets/nav-patch.css">
   <script src="assets/main.js" defer></script>
+<!-- ✅ เพิ่ม (STEP 1) ต้องอยู่หลัง main.js -->
+<script src="assets/nav-patch.js" defer></script>  
 </head>
 
 <body class="page--services">
