--- a/service-20min.html
+++ b/service-20min.html
@@ -55,7 +55,11 @@
     body:not(.menuOpen) #menuBackdrop{ display:none !important; }
   </style>
 
+  <!-- ✅ เพิ่ม (STEP 3) -->
+<link rel="stylesheet" href="assets/nav-patch.css">
   <script src="assets/main.js" defer></script>
+<!-- ✅ เพิ่ม (STEP 1) ต้องอยู่หลัง main.js -->
+<script src="assets/nav-patch.js" defer></script>  
 </head>
 
 <body class="page--shop shopPage">
