--- a/practices.html
+++ b/practices.html
@@ -23,7 +23,12 @@
 
   <link rel="stylesheet" href="assets/css2/fixes/99_hotfix.css">
   <link rel="stylesheet" href="assets/css2/fixes/98_final_polish.css">
+
+  <!-- ✅ เพิ่ม (STEP 3) -->
+<link rel="stylesheet" href="assets/nav-patch.css">
   <script src="assets/main.js" defer></script>
+<!-- ✅ เพิ่ม (STEP 3) -->
+<link rel="stylesheet" href="assets/nav-patch.css">  
 </head>
   
 <body class="page--index2 practicesPage">
