--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,9 @@
 
   <link rel="stylesheet" href="assets/css2/fixes/99_hotfix.css">
   <link rel="stylesheet" href="assets/css2/fixes/98_final_polish.css">
-
+  <!-- CSS เฉพาะหน้า Contract -->
+  <link rel="stylesheet" href="assets/css2/pages/contract.css">
+  
   <!-- ✅ เพิ่ม (STEP 3) -->
 <link rel="stylesheet" href="assets/nav-patch.css">
   <script src="assets/main.js" defer></script>
