--- a/certification.html
+++ b/certification.html
@@ -26,7 +26,11 @@
   <!-- ✅ เฉพาะหน้า about (วางหลัง pages/index2.css ตามสเปก) -->
   <link rel="stylesheet" href="assets/css2/pages/about.css">
 
+  <!-- ✅ เพิ่ม (STEP 3) -->
+<link rel="stylesheet" href="assets/nav-patch.css">
   <script src="assets/main.js" defer></script>
+<!-- ✅ เพิ่ม (STEP 1) ต้องอยู่หลัง main.js -->
+<script src="assets/nav-patch.js" defer></script>  
 </head>
 
 <body class="aboutPage">
