--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
  <script src="assets/nav-patch.js" defer></script>
 </head>
 
-<body class="page--index2 practicesPage">
+<body class="contactPage">
 
  <!-- HEADER -->
 <header class="siteHeader">
