--- a/contact.html
+++ b/contact.html
@@ -209,7 +209,7 @@
       <div class="kicker">Address</div>
       <div style="font-weight:850;font-size:18px;margin-top:6px;">Lumpini Condo Town Rattanathibet Condominium</div>
       <div style="margin-top:10px;color:var(--muted);line-height:1.85;">
-        443/11, 5 Rattana Thibet Rd.<br>
+        443/11, 5 Rattanathibet Rd.<br>
         Bangkasor, Muang Nonthaburi 11000
         Tel. 0632616262
           </div>
