--- a/shop-ebook-package.html
+++ b/shop-ebook-package.html
@@ -289,75 +289,131 @@
 
       <div class="productGrid grid-2x2">
 
-        <!-- Package 1 -->
-        <div class="card cardGold">
-          <h3>Heartlight Entry</h3>
-          <p class="price">690 บาท</p>
+      <!-- Package 1-->
+<div class="card cardGold">
 
-          <ul>
-            <li>eBook (209 หน้า)</li>
-            <li>สคริปต์สมาธิ 2 ชุด</li>
-            <li>“ลมหายใจแห่งแสง”</li>
-            <li>“เชื่อมต่อหัวใจตัวเอง”</li>
-          </ul>
+  <!-- Package Image -->
+  <img
+    src="assets/images/ebook/packages/package-heartlight-entry.webp"
+    alt="Heartlight Entry Package"
+    class="cardImg"
+    loading="lazy"
+  >
 
-          <p class="small">
-            เหมาะสำหรับผู้เริ่มต้นเยียวยาหัวใจ  
-            ใช้ฝึกได้ทันที ไม่ต้องมีพื้นฐาน
-          </p>
+  <h3>Heartlight Entry</h3>
+  <p class="price">690 บาท</p>
 
-          <a class="btn primary" href="https://shop.line.me/@mew3619k/product/1007888122" target="_blank">
-            สั่งซื้อแพ็กนี้
-          </a>
-        </div>
+  <ul>
+    <li>eBook (209 หน้า)</li>
+    <li>สคริปต์สมาธิ 2 ชุด</li>
+    <li>“ลมหายใจแห่งแสง”</li>
+    <li>“เชื่อมต่อหัวใจตัวเอง”</li>
+  </ul>
+
+  <p class="small">
+    เหมาะสำหรับผู้เริ่มต้นเยียวยาหัวใจ<br>
+    ใช้ฝึกได้ทันที ไม่ต้องมีพื้นฐาน
+  </p>
+
+  <a
+    class="btn primary"
+    href="https://shop.line.me/@mew3619k/product/1007888122"
+    target="_blank"
+    rel="noopener"
+  >
+    สั่งซื้อแพ็กนี้
+  </a>
+
+</div>
 
         <!-- Package 2 -->
-        <div class="card cardGold">
-          <h3>Soul Whisper Set</h3>
-          <p class="price">990 บาท</p>
+<div class="card cardGold">
 
-          <ul>
-            <li>eBook (PDF)</li>
-            <li>Voice Only 2 แทร็ก</li>
-            <li>เวอร์ชันกระซิบอ่อนโยน</li>
-          </ul>
+  <!-- Package Image -->
+  <img
+    src="assets/images/ebook/packages/package-soul-whisper-set.webp"
+    alt="Soul Whisper Set Package"
+    class="cardImg"
+    loading="lazy"
+  >
 
-          <p class="small">
-            เหมาะสำหรับผู้ที่ชอบฝึกสมาธิด้วยเสียงนำ  
-            ฟังตัวเองได้ลึกขึ้น…โดยไม่ต้องเร่ง
-          </p>
+  <h3>Soul Whisper Set</h3>
+  <p class="price">990 บาท</p>
 
-          <a class="btn primary" href="https://shop.line.me/@mew3619k/product/1007257832" target="_blank">
-            สั่งซื้อแพ็กนี้
-          </a>
-        </div>
+  <ul>
+    <li>eBook (PDF)</li>
+    <li>Voice Only 2 แทร็ก</li>
+    <li>เวอร์ชันกระซิบอ่อนโยน</li>
+  </ul>
+
+  <p class="small">
+    เหมาะสำหรับผู้ที่ชอบฝึกสมาธิด้วยเสียงนำ<br>
+    ฟังตัวเองได้ลึกขึ้น…โดยไม่ต้องเร่ง
+  </p>
+
+  <a
+    class="btn primary"
+    href="https://shop.line.me/@mew3619k/product/1007257832"
+    target="_blank"
+    rel="noopener"
+  >
+    สั่งซื้อแพ็กนี้
+  </a>
+
+</div>
 
         <!-- Package 3 (Recommended) -->
-        <div class="card cardGold recommended">
-          <div class="badge">แนะนำ</div>
+<div class="card cardGold recommended">
 
-          <h3>Theta Soul Healing Set</h3>
-          <p class="price">1,490 บาท</p>
+  <!-- Badge -->
+  <div class="badge">แนะนำ</div>
 
-          <ul>
-            <li>eBook (PDF)</li>
-            <li>Voice Only 2 แทร็ก</li>
-            <li>Theta Brainwave 2 แทร็ก</li>
-          </ul>
+  <!-- Package Image -->
+  <img
+    src="assets/images/ebook/packages/package-theta-soul-healing-set.webp"
+    alt="Theta Soul Healing Set Package"
+    class="cardImg"
+    loading="lazy"
+  >
 
-          <p class="small">
-            เหมาะสำหรับผู้ที่ต้องการ Healing Brainwave จริงจัง  
-            ใช้ฟังก่อนนอน หรือเปิดใจรับพลังใหม่
-          </p>
+  <h3>Theta Soul Healing Set</h3>
+  <p class="price">1,490 บาท</p>
 
-          <a class="btn primary" href="https://shop.line.me/@mew3619k/product/1007888153" target="_blank">
-            สั่งซื้อแพ็กนี้
-          </a>
-        </div>
+  <ul>
+    <li>eBook (PDF)</li>
+    <li>Voice Only 2 แทร็ก</li>
+    <li>Theta Brainwave 2 แทร็ก</li>
+  </ul>
 
-        <!-- Package 4 -->
+  <p class="small">
+    เหมาะสำหรับผู้ที่ต้องการ Healing Brainwave จริงจัง<br>
+    ใช้ฟังก่อนนอน หรือเปิดใจรับพลังใหม่
+  </p>
+
+  <a
+    class="btn primary"
+    href="https://shop.line.me/@mew3619k/product/1007888153"
+    target="_blank"
+    rel="noopener"
+  >
+    สั่งซื้อแพ็กนี้
+  </a>
+
+</div>
+
+       <!-- Package 4 -->
 <div class="card cardGold bestSellerCard">
- <div class="badge bestSeller">Best Seller</div>
+
+  <!-- Badge -->
+  <div class="badge bestSeller">Best Seller</div>
+
+  <!-- Package Image -->
+  <img
+    src="assets/images/ebook/packages/package-soul-awakening-master-set.webp"
+    alt="Soul Awakening Master Set Package"
+    class="cardImg"
+    loading="lazy"
+  >
 
   <h3>Soul Awakening Master Set</h3>
   <p class="price">2,490 บาท</p>
@@ -369,17 +425,21 @@
   </ul>
 
   <p class="small">
-    เหมาะสำหรับผู้ที่ต้องการเยียวยาแบบครบองค์รวม  
+    เหมาะสำหรับผู้ที่ต้องการเยียวยาแบบครบองค์รวม<br>
     พร้อมเส้นทางฝึกฝนต่ออย่างเป็นระบบ
   </p>
 
-  <a class="btn primary"
-     href="https://shop.line.me/@mew3619k/product/1007888161"
-     target="_blank">
+  <a
+    class="btn primary"
+    href="https://shop.line.me/@mew3619k/product/1007888161"
+    target="_blank"
+    rel="noopener"
+  >
     สั่งซื้อแพ็กนี้
   </a>
 
 </div>
+
         
 <!-- ================================
      FINAL CTA
