--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KRUNIKI Academy — Services</title>
+  <title>KRUNIKI — Heart • Stillness • Healing</title>
   <meta name="description" content="KRUNIKI — Services • Heart Awakening • Private Guidance • Programs" />
 
   <style>
