--- a/service-private-guidance.html
+++ b/service-private-guidance.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KRUNIKI Academy</title>
-  <meta name="description" content="KRUNIKI — Heart Awakening • Self-Healing • Conscious Learning" />
+  <title>KRUNIKI — Heart • Stillness • Healing | Private Guidance</title>
+  <meta name="description" content="Private guidance by KRUNIKI. One-on-one support for heart awareness, stillness, and self-healing." />
 <style>
   :root{
     --font-brand: "Times New Roman", Times, serif;
