--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KRUNIKI Academy</title>
-  <meta name="description" content="KRUNIKI — Heart Awakening • Self-Healing • Conscious Learning" />
+  <title>KRUNIKI — Heart • Stillness • Healing | About</title>
+  <meta name="description" content="About KRUNIKI. Heart-centered learning focused on stillness, self-awareness, and grounded self-healing." />
   <style>
     :root{
       --font-brand: "Times New Roman", Times, serif;
