--- a/practices.html
+++ b/practices.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KRUNIKI Academy</title>
-  <meta name="description" content="KRUNIKI — Heart Awakening • Self-Healing • Conscious Learning" />
+  <title>KRUNIKI — Heart • Stillness • Healing | Practices</title>
+  <meta name="description" content="Foundational practices for heart awareness, stillness, and safe self-regulation. Public learning by KRUNIKI." />
 <style>
   :root{
     --font-brand: "Times New Roman", Times, serif;
