--- a/learning.html
+++ b/learning.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Learning | KRUNIKI</title>
-  <meta name="description" content="KRUNIKI Learning — Foundations • Heart Awakening (Public Version)" />
+  <title>KRUNIKI — Heart • Stillness • Healing | Learning</title>
+ <meta name="description" content="Structured learning foundations for heart awareness, inner stability, and conscious self-development by KRUNIKI." />
 <style>
   :root{
     --font-brand: "Times New Roman", Times, serif;
