--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KRUNIKI Academy</title>
-  <meta name="description" content="KRUNIKI — Heart Awakening • Self-Healing • Conscious Learning" />
+  <title>KRUNIKI — Heart • Stillness • Healing | Contact</title>
+<meta name="description" content="Contact KRUNIKI. Heart-centered guidance, LINE OA connection, and conscious self-healing support." />
 <style>
   :root{
     --font-brand: "Times New Roman", Times, serif;
