--- a/resources.html
+++ b/resources.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Resources | KRUNIKI</title>
-  <meta name="description" content="KRUNIKI Resources — Tools • Breath & Stillness • Notes (Public Library)" />
+  <title>KRUNIKI — Heart • Stillness • Healing | Resources</title>
+<meta name="description" content="KRUNIKI Resources. Foundational practices, learning paths, and public tools for calm self-regulation and inner stability." />
 <style>
   :root{
     --font-brand: "Times New Roman", Times, serif;
