--- a/resources-breath.html
+++ b/resources-breath.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KRUNIKI Academy</title>
-  <meta name="description" content="KRUNIKI — Heart Awakening • Self-Healing • Conscious Learning" />
+  <title>KRUNIKI — Heart • Stillness • Healing | Breath</title>
+<meta name="description" content="Breath foundations by KRUNIKI. Safe breathing principles for nervous-system regulation and daily inner stability." />
 <style>
   :root{
     --font-brand: "Times New Roman", Times, serif;
