--- a/resources-journal.html
+++ b/resources-journal.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KRUNIKI Academy</title>
-  <meta name="description" content="KRUNIKI — Heart Awakening • Self-Healing • Conscious Learning" />
+  <title>KRUNIKI — Heart • Stillness • Healing | Journal</title>
+<meta name="description" content="KRUNIKI Journal. Gentle reflective journaling for self-awareness and safe internal processing." />
 <style>
   :root{
     --font-brand: "Times New Roman", Times, serif;
