--- a/resources-notes.html
+++ b/resources-notes.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KRUNIKI Academy</title>
-  <meta name="description" content="KRUNIKI — Heart Awakening • Self-Healing • Conscious Learning" />
+  <title>KRUNIKI — Heart • Stillness • Healing | Notes</title>
+<meta name="description" content="KRUNIKI Notes. Conceptual references and structured understanding to support conscious self-learning." />
 <style>
   :root{
     --font-brand: "Times New Roman", Times, serif;
