--- a/resources-paths.html
+++ b/resources-paths.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KRUNIKI Academy</title>
-  <meta name="description" content="KRUNIKI — Heart Awakening • Self-Healing • Conscious Learning" />
+  <title>KRUNIKI — Heart • Stillness • Healing | Paths</title>
+<meta name="description" content="KRUNIKI Paths. Structured learning directions for self-paced exploration and conscious inner development." />
 <style>
   :root{
     --font-brand: "Times New Roman", Times, serif;
