--- a/resources-reset.html
+++ b/resources-reset.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KRUNIKI Academy</title>
-  <meta name="description" content="KRUNIKI — Heart Awakening • Self-Healing • Conscious Learning" />
+  <title>KRUNIKI — Heart • Stillness • Healing | Reset</title>
+<meta name="description" content="KRUNIKI Reset. Foundational practices for nervous system grounding and returning to internal baseline safely." />
 <style>
   :root{
     --font-brand: "Times New Roman", Times, serif;
