--- a/resources-stillness.html
+++ b/resources-stillness.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KRUNIKI Academy</title>
-  <meta name="description" content="KRUNIKI — Heart Awakening • Self-Healing • Conscious Learning" />
+  <title>KRUNIKI — Heart • Stillness • Healing | Stillness</title>
+<meta name="description" content="KRUNIKI Stillness. Principles of internal safety and nervous-system settling through natural, non-forced stillness." />
 <style>
   :root{
     --font-brand: "Times New Roman", Times, serif;
