--- a/shop.html
+++ b/shop.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
- <title>KRUNIKI — Heart • Stillness • Healing</title>
-  <meta name="description" content="KRUNIKI — Heart Awakening • Self-Healing • Conscious Learning" />
+ <title>KRUNIKI — Heart • Stillness • Healing | Shop</title>
+<meta name="description" content="KRUNIKI Shop. Curated self-healing resources including eBooks, meditation audio, and conscious learning tools." />
 <style>
   :root{
     --font-brand: "Times New Roman", Times, serif;
