--- a/shop-brainwaves.html
+++ b/shop-brainwaves.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KRUNIKI — Heart • Stillness • Healing</title>
-  <meta name="description" content="KRUNIKI — Heart Awakening • Self-Healing • Conscious Learning" />
-
+  <title>KRUNIKI — Heart • Stillness • Healing | Brainwaves</title>
+<meta name="description" content="KRUNIKI Brainwaves. Alpha and Theta audio designed for nervous-system regulation, rest, and inner balance." />
   <style>
     :root{
       --font-brand: "Times New Roman", Times, serif;
