--- a/whisper-of-heart-frequency.html
+++ b/whisper-of-heart-frequency.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Whisper of Heart Frequency | KRUNIKI</title>
-  <meta name="description" content="Whisper of Heart Frequency — Whisper Tracks • Brainwave Series by KRUNIKI" />
+  <title>KRUNIKI — Heart • Stillness • Healing | Whisper of Heart Frequency</title>
+<meta name="description" content="KRUNIKI Whisper of Heart Frequency. Gentle affirmation and meditation audio to reconnect with inner heart awareness." />
 
   <style>
     :root{
