--- a/service-tools.html
+++ b/service-tools.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KRUNIKI — Heart • Stillness • Healing</title>
-  <meta name="description" content="KRUNIKI — Heart Awakening • Self-Healing • Conscious Learning" />
+  <title>KRUNIKI — Heart • Stillness • Healing | Tools & Practices</title>
+<meta name="description" content="KRUNIKI Tools & Practices. Gentle self-guided tools for heart awareness, nervous-system care, and daily inner stability." />
 <style>
   :root{
     --font-brand: "Times New Roman", Times, serif;
