--- a/services.html
+++ b/services.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KRUNIKI — Heart • Stillness • Healing</title>
-  <meta name="description" content="KRUNIKI — Services • Heart Awakening • Private Guidance • Programs" />
+  <title>KRUNIKI — Heart • Stillness • Healing | Services</title>
+<meta name="description" content="KRUNIKI Services. Heart-centered guidance, self-healing sessions, and structured learning pathways." />
 
   <style>
     :root{
