--- a/shop-ebook-package.html
+++ b/shop-ebook-package.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
- <title>KRUNIKI — Heart • Stillness • Healing</title>
-  <meta name="description" content="KRUNIKI — Heart Awakening • Self-Healing • Conscious Learning" />
+ <title>KRUNIKI — Heart • Stillness • Healing | eBook Packages</title>
+<meta name="description" content="KRUNIKI eBook Packages. Self-healing bundles combining guided meditation, gentle audio, and conscious learning tools." />
 
   <style>
     :root{
