--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
         KRUNIKI คือระบบการเรียนรู้และการปฏิบัติ<br>
         ที่ออกแบบมาเพื่อพาผู้คนกลับไปสู่ศูนย์กลางของตนเอง<br>
         ผ่านสติ ลมหายใจ และการฟังหัวใจอย่างเป็นลำดับ<br>
-        <span class="tagline">หัวใจ • ความนิ่ง • การเยียวยาภายใน</span>
+        <span class="tagline">หัวใจ • สงบนิ่ง • การเยียวยาภายใน</span>
       </p>
 
       <p class="en lead">
