--- a/about.html
+++ b/about.html
@@ -151,7 +151,8 @@
       <p class="en lead">
         KRUNIKI is a structured learning and practice system<br>
         designed to guide individuals back to their inner center<br>
-        through mindfulness, breath-based awareness, and heart-centered listening,<br>
+        through mindfulness, breath-based awareness,
+        and heart-centered listening,<br>
         in a clear and sequential manner,<br>
         where stillness emerges as awareness returns to the breath.<br>
         <span class="tagline">Heart • Stillness • Inner Healing</span>
