--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
     "name": "KRUNIKI",
     "url": "https://kruniki.com/",
     "logo": "https://kruniki.com/assets/images/logo/kruniki-logo-website_1.png"
-    <!-- Favicon & App Icons -->
-<link rel="icon" type="image/x-icon" href="assets/images/logo/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="assets/images/logo/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="assets/images/logo/favicon-32x32.png">
-<link rel="apple-touch-icon" sizes="180x180" href="assets/images/logo/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="192x192" href="assets/images/logo/android-chrome-192x192.png">
-<link rel="icon" type="image/png" sizes="512x512" href="assets/images/logo/android-chrome-512x512.png">
   }
   </script>
+
+<!-- Favicon & App Icons -->
+<link rel="icon" type="image/x-icon" href="assets/images/logo/favicon.ico"/>
+<link rel="icon" type="image/png" sizes="16x16" href="assets/images/logo/favicon-16x16.png"/>
+<link rel="icon" type="image/png" sizes="32x32" href="assets/images/logo/favicon-32x32.png"/>
+<link rel="apple-touch-icon" sizes="180x180" href="assets/images/logo/apple-touch-icon.png"/>
+<link rel="icon" type="image/png" sizes="192x192" href="assets/images/logo/android-chrome-192x192.png"/>
+<link rel="icon" type="image/png" sizes="512x512" href="assets/images/logo/android-chrome-512x512.png"/>
   
 <style>
   :root{
