--- a/whisper-of-heart-frequency.html
+++ b/whisper-of-heart-frequency.html
@@ -6,6 +6,14 @@
   <title>KRUNIKI — Heart • Stillness • Healing | Whisper of Heart Frequency</title>
 <meta name="description" content="KRUNIKI Whisper of Heart Frequency. Gentle affirmation and meditation audio to reconnect with inner heart awareness." />
 
+<!-- Favicon & App Icons -->
+<link rel="icon" type="image/x-icon" href="assets/images/logo/favicon.ico"/>
+<link rel="icon" type="image/png" sizes="16x16" href="assets/images/logo/favicon-16x16.png"/>
+<link rel="icon" type="image/png" sizes="32x32" href="assets/images/logo/favicon-32x32.png"/>
+<link rel="apple-touch-icon" sizes="180x180" href="assets/images/logo/apple-touch-icon.png"/>
+<link rel="icon" type="image/png" sizes="192x192" href="assets/images/logo/android-chrome-192x192.png"/>
+<link rel="icon" type="image/png" sizes="512x512" href="assets/images/logo/android-chrome-512x512.png"/>
+  
   <style>
     :root{
       --font-brand: "Times New Roman", Times, serif;
