--- a/shop-ebook-package.html
+++ b/shop-ebook-package.html
@@ -6,6 +6,14 @@
  <title>KRUNIKI — Heart • Stillness • Healing | eBook Packages</title>
 <meta name="description" content="KRUNIKI eBook Packages. Self-healing bundles combining guided meditation, gentle audio, and conscious learning tools." />
 
+<!-- Favicon & App Icons -->
+<link rel="icon" type="image/x-icon" href="assets/images/logo/favicon.ico"/>
+<link rel="icon" type="image/png" sizes="16x16" href="assets/images/logo/favicon-16x16.png"/>
+<link rel="icon" type="image/png" sizes="32x32" href="assets/images/logo/favicon-32x32.png"/>
+<link rel="apple-touch-icon" sizes="180x180" href="assets/images/logo/apple-touch-icon.png"/>
+<link rel="icon" type="image/png" sizes="192x192" href="assets/images/logo/android-chrome-192x192.png"/>
+<link rel="icon" type="image/png" sizes="512x512" href="assets/images/logo/android-chrome-512x512.png"/>
+  
   <style>
     :root{
       --font-brand: "Times New Roman", Times, serif;
