--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>KRUNIKI — Heart • Stillness • Healing | Contact</title>
 <meta name="description" content="Contact KRUNIKI. Heart-centered guidance, LINE OA connection, and conscious self-healing support." />
+
+<!-- Favicon & App Icons -->
+<link rel="icon" type="image/x-icon" href="assets/images/logo/favicon.ico"/>
+<link rel="icon" type="image/png" sizes="16x16" href="assets/images/logo/favicon-16x16.png"/>
+<link rel="icon" type="image/png" sizes="32x32" href="assets/images/logo/favicon-32x32.png"/>
+<link rel="apple-touch-icon" sizes="180x180" href="assets/images/logo/apple-touch-icon.png"/>
+<link rel="icon" type="image/png" sizes="192x192" href="assets/images/logo/android-chrome-192x192.png"/>
+<link rel="icon" type="image/png" sizes="512x512" href="assets/images/logo/android-chrome-512x512.png"/>
+    
 <style>
   :root{
     --font-brand: "Times New Roman", Times, serif;
