--- a/shop-brainwaves 1.html
+++ b/shop-brainwaves 1.html
@@ -3,9 +3,17 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KRUNIKI Academy</title>
-  <meta name="description" content="KRUNIKI — Heart Awakening • Self-Healing • Conscious Learning" />
+  <title>KRUNIKI — Heart • Stillness • Healing | Brainwaves</title>
+<meta name="description" content="KRUNIKI Brainwaves. Alpha and Theta audio designed for nervous-system regulation, rest, and inner balance." />
 
+<!-- Favicon & App Icons -->
+<link rel="icon" type="image/x-icon" href="assets/images/logo/favicon.ico"/>
+<link rel="icon" type="image/png" sizes="16x16" href="assets/images/logo/favicon-16x16.png"/>
+<link rel="icon" type="image/png" sizes="32x32" href="assets/images/logo/favicon-32x32.png"/>
+<link rel="apple-touch-icon" sizes="180x180" href="assets/images/logo/apple-touch-icon.png"/>
+<link rel="icon" type="image/png" sizes="192x192" href="assets/images/logo/android-chrome-192x192.png"/>
+<link rel="icon" type="image/png" sizes="512x512" href="assets/images/logo/android-chrome-512x512.png"/>
+  
   <style>
     :root{
       --font-brand: "Times New Roman", Times, serif;
@@ -27,8 +35,14 @@
   <!-- Product page specific -->
   <link rel="stylesheet" href="assets/css2/pages/shop-brainwaves.css">
   <link rel="stylesheet" href="assets/css2/pages/shop-brainwaves.fix.css">
-  
+
+  <link rel="stylesheet" href="assets/css2/fixes/97_android_perf.css">
+
+   <!-- ✅ เพิ่ม (STEP 3) -->
+<link rel="stylesheet" href="assets/nav-patch.css">
   <script src="assets/main.js" defer></script>
+<!-- ✅ เพิ่ม (STEP 1) ต้องอยู่หลัง main.js -->
+<script src="assets/nav-patch.js" defer></script>  
 </head>
 
 <body class="page--shop-brainwaves">
