--- a/shop.html
+++ b/shop.html
@@ -31,6 +31,8 @@
 
   <!-- เฉพาะหน้า shop -->
 <link rel="stylesheet" href="assets/css2/pages/shop.css">
+
+<link rel="stylesheet" href="assets/css2/fixes/97_android_perf.css">
   
  <!-- ✅ เพิ่ม (STEP 3) -->
 <link rel="stylesheet" href="assets/nav-patch.css">
