--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
   <link rel="stylesheet" href="assets/css2/pages/index2.css">
   <link rel="stylesheet" href="assets/css2/fixes/99_hotfix.css">
   <link rel="stylesheet" href="assets/css2/fixes/98_final_polish.css">
+
+<link rel="stylesheet" href="assets/css2/fixes/97_android_perf.css">
+  
   <!-- ✅ เพิ่ม (STEP 3) -->
 <link rel="stylesheet" href="assets/nav-patch.css">
 
