--- a/whisper-of-heart-frequency.html
+++ b/whisper-of-heart-frequency.html
@@ -48,6 +48,8 @@
 
   <!-- เฉพาะหน้า shop -->
   <link rel="stylesheet" href="assets/css2/pages/shop.css">
+
+  <link rel="stylesheet" href="assets/css2/fixes/97_android_perf.css">
   
   <link rel="stylesheet" href="assets/nav-patch.css">
 
