--- a/shop-ebook-package.html
+++ b/shop-ebook-package.html
@@ -34,6 +34,8 @@
 
   <!-- Product page specific -->
 <link rel="stylesheet" href="assets/css2/pages/shop-ebook-package.css">
+
+<link rel="stylesheet" href="assets/css2/fixes/97_android_perf.css">
   
 <!-- ✅ เพิ่ม (STEP 3) -->
 <link rel="stylesheet" href="assets/nav-patch.css">
