--- a/shop-brainwaves.html
+++ b/shop-brainwaves.html
@@ -36,6 +36,8 @@
   <link rel="stylesheet" href="assets/css2/pages/shop-brainwaves.css">
   <link rel="stylesheet" href="assets/css2/pages/shop-brainwaves.fix.css">
 
+  <link rel="stylesheet" href="assets/css2/fixes/97_android_perf.css">
+  
    <!-- ✅ เพิ่ม (STEP 3) -->
 <link rel="stylesheet" href="assets/nav-patch.css">
   <script src="assets/main.js" defer></script>
