--- a/services.html
+++ b/services.html
@@ -63,6 +63,8 @@
   <link rel="stylesheet" href="assets/css2/pages/shop.css">
   <link rel="stylesheet" href="assets/css2/pages/services.css">
 
+  <link rel="stylesheet" href="assets/css2/fixes/97_android_perf.css">
+  
   <!-- ✅ เพิ่ม (STEP 3) -->
 <link rel="stylesheet" href="assets/nav-patch.css">
   <script src="assets/main.js" defer></script>
