--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,8 @@
   <link rel="stylesheet" href="assets/css2/fixes/98_final_polish.css">
   <!-- CSS เฉพาะหน้า Contract -->
   <link rel="stylesheet" href="assets/css2/pages/contract.css">
+
+  <link rel="stylesheet" href="assets/css2/fixes/97_android_perf.css">
   
   <!-- ✅ เพิ่ม (STEP 3) -->
  <link rel="stylesheet" href="assets/nav-patch.css">
