--- a/certification.html
+++ b/certification.html
@@ -34,6 +34,8 @@
   <!-- ✅ เฉพาะหน้า about (วางหลัง pages/index2.css ตามสเปก) -->
   <link rel="stylesheet" href="assets/css2/pages/about.css">
 
+  <link rel="stylesheet" href="assets/css2/fixes/97_android_perf.css">
+
   <!-- ✅ เพิ่ม (STEP 3) -->
 <link rel="stylesheet" href="assets/nav-patch.css">
   <script src="assets/main.js" defer></script>
