--- a/service-private-guidance.html
+++ b/service-private-guidance.html
@@ -33,6 +33,8 @@
   <link rel="stylesheet" href="assets/css2/fixes/99_hotfix.css">
   <link rel="stylesheet" href="assets/css2/fixes/98_final_polish.css">
 
+  <link rel="stylesheet" href="assets/css2/fixes/97_android_perf.css">
+
   <!-- ✅ เพิ่ม (STEP 3) -->
 <link rel="stylesheet" href="assets/nav-patch.css">
   <script src="assets/main.js" defer></script>
