--- a/service-20min.html
+++ b/service-20min.html
@@ -63,6 +63,8 @@
     body:not(.menuOpen) #menuBackdrop{ display:none !important; }
   </style>
 
+<link rel="stylesheet" href="assets/css2/fixes/97_android_perf.css">
+  
   <!-- ✅ เพิ่ม (STEP 3) -->
 <link rel="stylesheet" href="assets/nav-patch.css">
   <script src="assets/main.js" defer></script>
