--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <nav class="navLinks" aria-label="Primary navigation">
       <a href="shop.html">ร้านค้า</a>
       <a href="index.html">หน้าแรก</a>
-      <a href="about.html">เกี่ยวกับ</a>
+      <a href="about-1.html">เกี่ยวกับ</a>
       <a href="services.html">บริการ</a>
       <a href="resources.html">คลังความรู้</a>
       <a href="contact.html">ติดต่อ</a>
@@ -143,7 +143,7 @@
   <nav id="mobileMenu" class="mobileMenu" hidden aria-label="Mobile navigation">
     <a href="shop.html">ร้านค้า</a>
     <a href="index.html">หน้าแรก</a>
-    <a href="about.html">เกี่ยวกับ</a>
+    <a href="about-1.html">เกี่ยวกับ</a>
     <a href="services.html">บริการ</a>
     <a href="resources.html">คลังความรู้</a>
     <a href="contact.html">ติดต่อ</a>
