--- a/about.html
+++ b/about.html
@@ -270,7 +270,7 @@
 
   <div class="aboutDivider" aria-hidden="true"></div>
 
-  <!-- 4) KRUNIKI Healing System™ + Certificate Program -->
+  <!-- 4) KRUNIKI Healing System™  -->
   <section class="panel aboutSection" aria-labelledby="healingTitle">
     <div class="container narrow">
 
@@ -357,24 +357,17 @@
 
       <div class="aboutMiniDivider" aria-hidden="true"></div>
 
-      <h3 class="aboutH3">KRUNIKI Healing System™ Certification Program (8–12 Months)</h3>
+        <h3 class="aboutH3">A Long-Form Learning Path (In Development)</h3>
 
-      <p class="th">
-        โปรแกรมประกาศนียบัตรนี้ถูกออกแบบให้เป็น
-        เส้นทางการพัฒนาภายในระยะยาว
-        สำหรับผู้ที่พร้อมเรียนรู้และทำงานกับตนเองอย่างจริงจัง
-      </p>
-      <p class="en">
-        This certification program is designed as a long-term inner development path
-        for those ready to work with themselves with seriousness and sincerity.
-      </p>
-
-      <p class="th">
-        ตลอดกระบวนการ ผู้เข้าร่วมจะค่อย ๆ สร้างรากฐานสำคัญ ได้แก่
-      </p>
-      <p class="en">
-        Throughout the process, participants gradually build key foundations:
-      </p>
+    <p class="th">
+      KRUNIKI กำลังพัฒนาเส้นทางการเรียนรู้ระยะยาว
+      สำหรับผู้ที่ต้องการทำงานกับตนเองอย่างจริงจังและต่อเนื่อง
+      โดยเน้นการสร้างรากฐานภายในที่มั่นคง ได้แก่:
+    </p>
+    <p class="en">
+      KRUNIKI is developing a long-form learning pathway
+      for those committed to steady, continuous inner work—focused on building stable internal foundations:
+    </p>
 
       <ul class="aboutList" aria-label="Program foundations">
         <li>
