--- a/about.html
+++ b/about.html
@@ -276,7 +276,7 @@
 
       <header class="sectionHead">
         <div class="goldline">Deep Learning • การเรียนรู้เชิงลึก</div>
-        <h2 class="sectionTitle" id="healingTitle">KRUNIKI Healing System™ + Certification Program</h2>
+        <h2 class="sectionTitle" id="healingTitle">KRUNIKI Healing System™</h2>
       </header>
 
       <p class="th">
